@startuml sbags-class

interface Pawn

interface Tile

interface Board {
    +getPawn(tile: Tile): Option[Pawn]
    +setPawn(tile: Tile, pawn: Pawn): Board
    +removePawn(tile: Tile): Board
}

interface Action {
    +execute(board: Board): Board
}

class PlacePawn {
    -tile
    -pawn
}

class RemovePawn {
    -tile
}

Pawn -- Board
Tile -- Board

Action <|-- RemovePawn
Action <|-- PlacePawn

Action .left.> Board

@enduml